# Twitter-Or-X-scrapper-

./: README.md  config.example.yaml  pyproject.toml
tests/: test_checkpoint.py  test_filters.py
x_scraper/: checkpoint.py  cli.py  config.py  filters.py  models.py  scraper.py  storage.py
